# personal_ledger

./: README.md
backend/: Dockerfile  alembic.ini  compose.yaml  ledger.db  main.py  pyproject.toml
backend/alembic/versions/: ab9a1a024f51_01_database_migrations.py
backend/src/: database.py  helper.py  models.py  objects.py  routers.py  routes.py
backend/src/routes/: accounts_router.py  categories_router.py  subcategories_router.py  transactions_router.py
frontend/: .babelrc  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AccountComponent.tsx  DashboardComponent.tsx  FooterComponent.tsx  HeaderComponent.tsx  NavbarComponent.tsx  NewTransactionComponent.tsx  TransactionComponent.tsx
frontend/src/routes/: BrowserRoutes.tsx
frontend/src/services/: accountsApi.ts  categoriesApi.ts  transactionApi.ts
frontend/src/store/: store.ts
