[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jairam B <b.jairam0512@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
